cabal-version:      3.0
name:               gossip-glommers-hs
version:            0.1.0.0
synopsis:           Gossip Glommers implementation in Haskell
-- description:
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Maelstrom
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, aeson, deriving-aeson, bytestring, async
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: DeriveGeneric, DeriveAnyClass, DerivingVia, DerivingStrategies, OverloadedStrings, DataKinds

executable echo
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        gossip-glommers-hs
    hs-source-dirs:   echo
    default-language: Haskell2010
  

test-suite gossip-glommers-hs-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.17.2.1,
        gossip-glommers-hs
